After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702674 - g_date_time_new_utc crash
g_date_time_new_utc crash
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-06-19 17:21 UTC by Andreas J. Guelzow
Modified: 2013-08-17 16:43 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andreas J. Guelzow 2013-06-19 17:21:52 UTC
In current git, g_date_time_new_utc (year=2013, month=-2147483647, day=31, hour=17, minute=15, seconds=48) appears to crash rather than return NULL. See bug # 702671 originally filed against Gnumeric. We are now avoiding calling g_date_time_new_utc with such arguments in libgsf.

Note that the documentation of g_date_time_new states: "It not considered a programmer error for the values to this function to be out of range, but in the case that they are, the function will return NULL."